# cmake-examples-Chinese

examples/qt/: CMakeLists.txt
examples/qt+libtorch/: CMakeLists.txt
examples/qt+libtorch/src/: main.cpp
examples/qt+opencv/: CMakeLists.txt
examples/qt+opencv+libtorch/: CMakeLists.txt
